--- a/dev/reception/index.ejs
+++ b/dev/reception/index.ejs
@@ -9,17 +9,31 @@
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<title>Welcome To Our Wedding!! - 日進印刷の社長が結婚しました。</title>
 				<link rel="stylesheet" href="../assets/css/main.css">
-				<link rel="stylesheet" href="../assets/css/entrance.css">
+				<link rel="stylesheet" href="../assets/css/reception.css">
 </head>
 
 <body>
-		<main class="row align-center align-middle">
-				<div id="entrance" class="column text-center">
-						<p><img alt="Kazuki & Kana -- Welcome To Our Wedding." class="lazyload" data-src="../assets/img/title.png"></p>
-						<p class="photo--title"><img alt="新郎の写真" class="lazyload" data-src="../assets/img/kazuki.png"><img alt="新婦の写真" class="lazyload" data-src="../assets/img/kana.png"></p>
-						<div class="button--entrance">
-								<a class="button--man" href="../flow"><img alt="新郎側受付-福田家" data-src="../assets/img/fukuda.png" class="lazyload"></a>
-								<a class="button--woman" href="../flow"><img alt="新婦側受付-牧野家" data-src="../assets/img/makino.png" class="lazyload"></a>
+		<main>
+				<h1 class="title--page">受付</h1>
+				<div class="recep--images text-center row align-bottom align-center">
+						<div class="column">
+								<img class="lazyload" alt="新郎福田一生側の受付イラスト" data-src="../assets/img/recep--man.png">
+						</div>
+						<div class="column">
+								<img class="lazyload" alt="新婦福田加奈側の受付イラスト" data-src="../assets/img/recep--woman.png">
+						</div>
+				</div>
+				<div class="recep--table">
+						<div class="button-group text-center row align-bottom align-center">
+								<div class="column">
+										<a href="../photos" class="button--circle --third"><img class="lazyload" alt="写真だけ見る" data-src="../assets/img/recep--third.png"></a>
+								</div>
+								<div class="column">
+										<a href="../flow" class="button--circle --main"><img class="lazyload" alt="入場する" data-src="../assets/img/recep--main.png"></a>
+								</div>
+								<div class="column">
+										<a href="http://amzn.asia/2wszS2W" target="_blank" class="button--circle --sub"><img class="lazyload" alt="ご祝儀を渡す" data-src="../assets/img/recep--sub.png"></a>
+								</div>
 						</div>
 				</div>
 		</main>
