ボタン配置を中央へ

--- a/dev/flow/index.ejs
+++ b/dev/flow/index.ejs
@@ -24,7 +24,7 @@
 						</div>
 				</div>
 				<div class="recep--table">
-						<div class="button-group text-center row align-bottom align-center">
+						<div class="button-group text-center row align-middle align-center">
 								<div class="column">
 										<a href="../photos" class="button--circle --third"><img class="lazyload" alt="写真だけ見る" data-src="../assets/img/recep--third.png"></a>
 								</div>
