--- a/dev/index.ejs
+++ b/dev/index.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-		<main class="row align-center align-middle">
+		<main class="row align-center align-middle expanded">
 				<div id="entrance" class="column text-center">
 						<p><img alt="Kazuki & Kana -- Welcome To Our Wedding." class="lazyload" data-src="./assets/img/title.png"></p>
 						<div class="row align-center">
@@ -32,8 +32,6 @@
 						</div>
 				</div>
 		</main>
-		<footer></footer>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" aync></script>
 		<script src="./assets/js/lazysizes.js" aync></script>
 </body>
 
