--- a/dev/reception/index.ejs
+++ b/dev/reception/index.ejs
@@ -15,7 +15,7 @@
 <body>
 		<main>
 				<h1 class="title--page">受付</h1>
-				<div class="recep--images text-center row align-bottom align-center">
+				<div class="recep--images text-center row align-bottom align-center expanded">
 						<div class="column">
 								<img class="lazyload" alt="新郎福田一生側の受付イラスト" data-src="../assets/img/recep--man.png">
 						</div>
@@ -23,22 +23,18 @@
 								<img class="lazyload" alt="新婦福田加奈側の受付イラスト" data-src="../assets/img/recep--woman.png">
 						</div>
 				</div>
-				<div class="recep--table">
-						<div class="button-group text-center row align-middle align-center">
-								<div class="column">
-										<a href="../photos" class="button--circle --third"><img class="lazyload" alt="写真だけ見る" data-src="../assets/img/recep--third.png"></a>
-								</div>
-								<div class="column">
-										<a href="../flow" class="button--circle --main"><img class="lazyload" alt="入場する" data-src="../assets/img/recep--main.png"></a>
-								</div>
-								<div class="column">
-										<a href="http://amzn.asia/2wszS2W" target="_blank" class="button--circle --sub"><img class="lazyload" alt="ご祝儀を渡す" data-src="../assets/img/recep--sub.png"></a>
-								</div>
+				<div class="recep--table text-center row align-middle align-center expanded">
+						<div class="column">
+								<a href="../photos" class="button--circle --third"><img class="lazyload" alt="写真だけ見る" data-src="../assets/img/recep--third.png"></a>
+						</div>
+						<div class="column">
+								<a href="../flow" class="button--circle --main"><img class="lazyload" alt="入場する" data-src="../assets/img/recep--main.png"></a>
+						</div>
+						<div class="column">
+								<a href="https://amzn.asia/2wszS2W" target="_blank" class="button--circle --sub"><img class="lazyload" alt="ご祝儀を渡す" data-src="../assets/img/recep--sub.png"></a>
 						</div>
 				</div>
 		</main>
-		<footer></footer>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" aync></script>
 		<script src="../assets/js/lazysizes.js" aync></script>
 </body>
 
