--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,6 @@
  */
 
 @import './config/paths';
-@import './config/colors';
 
 /**
  * Functions & Mixins & Animations
@@ -21,6 +20,7 @@
  */
 
 @import './config/images';
+@import './config/colors';
 @import './config/fonts';
 
 /**
@@ -33,65 +33,124 @@
 @import 'foundation';
 // Global styles
 @include foundation-global-styles;
-@include foundation-forms;
+// @include foundation-forms;
 @include foundation-typography;
 // Grids
 @include foundation-flex-grid;
 // Generic components
-@include foundation-button;
+// @include foundation-button;
 // @include foundation-button-group;
 // @include foundation-close-button;
-@include foundation-label;
+// @include foundation-label;
 // @include foundation-progress-bar;
 // @include foundation-slider;
 // @include foundation-switch;
 // @include foundation-table;
 // Basic components
 // @include foundation-badge;
-@include foundation-breadcrumbs;
+// @include foundation-breadcrumbs;
 // @include foundation-callout;
 // @include foundation-card;
 // @include foundation-dropdown;
 // @include foundation-pagination;
 // @include foundation-tooltip;
 // Containers
-@include foundation-accordion;
+// @include foundation-accordion;
 // @include foundation-media-object;
 // @include foundation-orbit;
-@include foundation-responsive-embed;
+// @include foundation-responsive-embed;
 // @include foundation-tabs;
 // @include foundation-thumbnail;
 // Menu-based containers
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-accordion-menu;
+// @include foundation-menu;
+// @include foundation-menu-icon;
+// @include foundation-accordion-menu;
 // @include foundation-drilldown-menu;
-@include foundation-dropdown-menu;
+// @include foundation-dropdown-menu;
 // Layout components
 // @include foundation-off-canvas;
-@include foundation-reveal;
-@include foundation-sticky;
+// @include foundation-reveal;
+// @include foundation-sticky;
 // @include foundation-title-bar;
 // @include foundation-top-bar;
 // Helpers
-@include foundation-float-classes;
+// @include foundation-float-classes;
 @include foundation-flex-classes;
-@include foundation-visibility-classes;
-@include foundation-prototype-classes;
+// @include foundation-visibility-classes;
+// @include foundation-prototype-classes;
 
 /**
  * Your Custom Styles.
- * - Components
+ * Global
  */
 
+.title--page {
+		margin: 1rem 2rem 2rem;
+		position: relative;
+		&::after {
+				position: absolute;
+				content: '';
+				width: .8em;
+				height: 3px;
+				bottom: -.5em;
+				left: 0;
+				background-color: #8a8a8a;
+		}
+		&.border--center::after {
+				left: 50%;
+				transform: translateX(-53%);
+		}
+}
 
-/**
- * Your Custom Styles.
- * - Object
- */
+.uncollapse .column {
+		padding: 10px;
+}
 
+.row.hr {
+		margin: 5rem auto;
+}
 
-/**
- * Your Custom Styles.
- * - Utility
- */
+footer {
+		text-align: center;
+		background-color: gray;
+		color: #DDD;
+		padding: 3rem 0;
+		a {
+				color: #DDD;
+		}
+		svg {
+				width: 2rem;
+				height: 2rem;
+				fill: #DDD;
+				transition: .3s;
+		}
+		// button
+		.btn {
+				display: inline-block;
+				padding: 1rem;
+				margin: 1rem;
+		}
+		.btn--facebook:hover svg {
+				fill: map-get($c_social, 'facebook');
+		}
+		.btn--twitter:hover svg {
+				fill: map-get($c_social, 'twitter');
+		}
+		.btn--instagram:hover svg {
+				fill: map-get($c_social, 'instagram');
+		}
+		// logo
+		.logo--main {
+				font-size: 2rem;
+				text-decoration: none;
+				color: #FFF;
+				@include breakpoint(medium) {
+						font-size: 3rem;
+				}
+		}
+		.logo--sub {
+				img {
+						max-width: 200px;
+				}
+		}
+}
