--- a/dev/flow/index.ejs
+++ b/dev/flow/index.ejs
@@ -715,7 +715,18 @@
 				<h1 class="title--page">祝辞を頂戴いたします。</h1>
 				<div class="hr row">
 						<div class="column">
-								<% // FB Comments Plugin %>
+								<div id="fb-root"></div>
+								<script async>
+										(function(d, s, id) {
+												var js, fjs = d.getElementsByTagName(s)[0];
+												if (d.getElementById(id)) return;
+												js = d.createElement(s);
+												js.id = id;
+												js.src = 'https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v3.2&appId=1469026710042384&autoLogAppEvents=1';
+												fjs.parentNode.insertBefore(js, fjs);
+										}(document, 'script', 'facebook-jssdk'));
+								</script>
+								<div class="fb-comments" data-href="https://dtdsh.com/wedding/" data-width="100%" data-numposts="5"></div>
 						</div>
 				</div>
 
