旅行の写真も挿入

--- a/dev/vr-view.ejs
+++ b/dev/vr-view.ejs
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
 		<meta charset="UTF-8">
 		<script></script>
-		<% include('_prefetch'); %>
+		<%- include('_prefetch'); %>
 				<meta http-equiv="X-UA-Compatible" content="IE=edge,chorme=1">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<title>Welcome To Our Wedding!! - 日進印刷の社長が結婚しました。</title>
